Revise meta description for CAPA manager
Updated the description meta tag for clarity.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="apple-touch-icon" sizes="180x180" href="capa (2).jpg?v=1">
+
   <title>ACONFEX · CAPA (Acciones Correctivas y Preventivas)</title>
-  <meta name="description" content="Gestor CAPA simple para operaciones de exportación (GFA/ACONFEX). Guarda localmente, exporta a PDF y maneja evidencias con vista previa. Incluye matriz de riesgo (gravedad x probabilidad)." />
+  <meta name="description" content="Gestor CAPA para operaciones de exportación. Guarda localmente, exporta a PDF y maneja evidencias con vista previa. Incluye matriz de riesgo (gravedad x probabilidad)." />
   <style>
     :root{
       --bg:#0b0f14; --panel:#121821; --ink:#e9edf2; --muted:#9fb0c3; --brand:#3fb389;
