--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@ Cambio de procedimiento/documento: ${yesNo(obj.camProc)}`, margin, y, 520);
       <div class="logo" aria-hidden="true"><img src="logo.png" alt="ACONFEX"></div>
       <div>
         <h1>ACONFEX · CAPA</h1>
-        <div class="sub">Correctivas y Preventivas · auditable ISO 9001 · 100% local (no envía datos)</div>
+        <div class="sub">Correctivas y Preventivas</div>
       </div>
       <div class="topbar">
         <label class="row" style="gap:6px"><input id="bigToggle" type="checkbox"> <span class="tag">Modo grande</span></label>
@@ -946,7 +946,6 @@ Cambio de procedimiento/documento: ${yesNo(obj.camProc)}`, margin, y, 520);
       </section>
     </div>
 
-    <div class="footer">Publica como <span class="kbd">index.html</span> en GitHub Pages. 100% local (IndexedDB + localStorage). Sube tu <span class="kbd">icon-180.jpg</span> para iPhone.</div>
   </div>
 
   <!-- Modal para vista previa de evidencias y PDF -->
