Update meta description and footer text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ACONFEX · CAPA (Acciones Correctivas y Preventivas)</title>
-  <meta name="description" content="Gestor CAPA simple, auditable ISO 9001. Guarda localmente, exporta a PDF e incrusta evidencias (imágenes y PDFs). Matriz de riesgo, checklist ISO y flujos de revisión/cierre." />
+  <meta name="description" content="Gestor CAPA, ISO 9001. Guarda localmente, exporta a PDF e incrusta evidencias (imágenes y PDFs). Matriz de riesgo, checklist ISO y flujos de revisión/cierre." />
   <link rel="apple-touch-icon" sizes="180x180" href="icon-180.jpg?v=1">
   <style>
     :root{
@@ -118,7 +118,7 @@
       <div class="logo" aria-hidden="true"><img src="logo.png" alt="ACONFEX"></div>
       <div>
         <h1>ACONFEX · CAPA</h1>
-        <div class="sub">Correctivas y Preventivas · auditable ISO 9001 · 100% local (no envía datos)</div>
+        <div class="sub">Correctivas y Preventivas · ISO 9001 · </div>
       </div>
       <div class="topbar">
         <label class="row" style="gap:6px"><input id="bigToggle" type="checkbox"> <span class="tag">Modo grande</span></label>
@@ -376,7 +376,6 @@
       </section>
     </div>
 
-    <div class="footer">Publica como <span class="kbd">index.html</span> en GitHub Pages. 100% local (IndexedDB + localStorage). Sube tu <span class="kbd">icon-180.jpg</span> para iPhone.</div>
   </div>
 
   <!-- Modal para vista previa de evidencias y PDF -->
