--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
        0) CONFIGURACIÓN CLOUD (Apps Script)
        Reemplaza WEBAPP_URL y API_KEY por tus valores
        ========================================================= */
-    const WEBAPP_URL = "https://script.google.com/macros/s/AKfycb.../exec"; // ← tu /exec
-    const API_KEY    = "TU_API_KEY";                                       // ← tu clave
+    const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbyKmw3Muw7GZp2rVudMB1tyPgSKc3dsO-r-d8z9HBWSTs8GRChqIbNsFwKsex_zL5xq/exec"; // ← tu /exec
+    const API_KEY = 'maxi-aconfex-2025-9Fh3s2KpQx4Z7wLmB8';                                       // ← tu clave
 
     /* =========================================================
        1) Anti-duplicado (bug típico al pegar en GitHub Pages)
